--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,6 +8,9 @@
     "prettier-preset.js",
     "tsconfig.json"
   ],
+  "scripts": {
+    "type-check": "echo 'No TypeScript files in config package'"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
